@@ -31,7 +31,7 @@
 #import "GSIndexedSkipList.h"
 
 #if !defined (GNUSTEP) &&  (MAC_OS_X_VERSION_MAX_ALLOWED <= MAC_OS_X_VERSION_10_4)
-#define NSUInteger unsigned int
+typedef unsigned int NSUInteger;
 #endif
 
 static Class	abstractClass = 0;
