@@ -23,6 +23,7 @@
    Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111 USA.
    */
 #import <Foundation/NSObject.h>
+#import <Foundation/NSDate.h>
 
 @class	GSLinkedList;
 @class	NSLock;
